12160 libdiskstatus: argument to 'alloca' may be too large Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>